--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "YuRim JIN"
+  name             : "YURIM JIN"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "SW Study"
   location         : "South Korea"
